fix: edit gap and padding in CategoriesFilter

--- a/components/CategoriesFilter/CategoriesFilter.module.css
+++ b/components/CategoriesFilter/CategoriesFilter.module.css
@@ -21,8 +21,10 @@
   @media only screen and (min-width: 768px) {
     display: flex;
     align-items: center;
+    gap: 12px;
 
     width: 100%;
+    height: 44px;
 
     justify-content: flex-start;
 
@@ -43,7 +45,7 @@
 .btn {
   white-space: nowrap;
   border-radius: 8px;
-  padding: 6px 12px;
+  padding: 6px;
   border: 1px solid var(--opacity-transparent);
   background: transparent;
   cursor: pointer;
